Modified Readme and Authors Using some inner functions instead of new ones to avoid repetition of code

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Alex Vergara Gil, alexvergaragil@gmail.com
+Leonel Alberto Torres Aroches, leonel@infomed.sld.cu
 Ricardo Terrero, ricardoterrero92@gmail.com
