Adding missed strings to localization

--- a/src/main/resources/NMQC_es.properties
+++ b/src/main/resources/NMQC_es.properties
@@ -80,3 +80,9 @@ ERROR_IN_CONNJUGATE_VIEW_METHOD=Error el m\u00e9todo de vistas conjugadas
 CENTER_OF_ROTATIONSINE_FIT=Centro de Rotaci\u00f3n: Ajuste a funci\u00f3n seno 
 CURVE_FITTING_ERROR=Error en ajuste de curva:\n Error: el ajuste no devuelve un n\u00famero
 BAD_FORMULA=_FUNCTION(X,_A,_...)=Bad formula; should be:\n   y = function(x, a, ...)
+ERROR_WHILE_READING_HEADER=Error al leer el encabezado
+NO_INFO_FOR_KEY_IN_DICOM_HEADER=No existe la clave {0} en el encabezado
+BAD_HEADER_OR_NOT_A_DICOM_HEADER=Encabezado defectuoso o la imagen no es DICOM
+SAVE_AS_EXCEL_FILE=Guardar fichero excel?
+TWO_BARS_PHANTOM_NEEDED=Se necesitan dos picos
+PROFILE=Perfil
