--- a/src/main/resources/NMQC_es.properties
+++ b/src/main/resources/NMQC_es.properties
@@ -15,8 +15,9 @@
 TEMPORAL=temporal 
 QUADRANT=Cuadrante
 BARWIDTH=Ancho de las barras (mm)
+QUADRANT_BAR_PHANTOM=Maniqu\u00ed de Cuadrante de Barras
 ABOUT_QUADRANT_BAR=Acerca de Quadrant Bar Phantom...
-QUADRANT_BAR_DESCRIPTION=Este Plugin calcula la resoluci\u00f3n espacial y la MTF de un maniqu\u00ec de cuadrante de barras.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
+QUADRANT_BAR_DESCRIPTION=Este Plugin calcula la resoluci\u00f3n espacial y la MTF de un maniqu\u00ed de cuadrante de barras.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
 TEST=Prueba
 DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=Este Plugin halla la uniformidad tomogr\u00e1fica en reconstrucciones 3D
 ABOUT_TOMOGRAPHIC_UNIFORMITY=Acerca de Tomographic Uniformity...
