Adding more missed strings to localization

--- a/src/main/resources/NMQC_es.properties
+++ b/src/main/resources/NMQC_es.properties
@@ -15,7 +15,7 @@
 TEMPORAL=temporal 
 QUADRANT=Cuadrante
 BARWIDTH=Ancho de las barras (mm)
-QUADRANT_BAR_PHANTOM=Maniqu\u00ed de Cuadrante de Barras
+QUADRANT_BAR_PHANTOM=Maniqu\u00ed de Cuadrante de Barras: 
 ABOUT_QUADRANT_BAR=Acerca de Quadrant Bar Phantom...
 QUADRANT_BAR_DESCRIPTION=Este Plugin calcula la resoluci\u00f3n espacial y la MTF de un maniqu\u00ed de cuadrante de barras.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
 TEST=Prueba
@@ -44,6 +44,7 @@ DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=Este Plugin calcula la resoluci\u0
 ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=Acerca de Spatial Resolution and Pixel Size...
 SPATIAL_RESOLUTION_IN=Resoluci\u00f3n espacial en  
 PIXEL_SIZE_IN=Tama\u00f1o de pixel en 
+PIXEL_SIZE=Tama\u00f1o de Pixel
 DIFFERENCE=Diferencia (%)
 HEADER_PIXEL_SIZE=Tama\u00f1o de pixel de la imagen (mm/px)
 REAL_PIXEL_SIZE=Tama\u00f1o de pixel real (mm/px)
