more on missing strings for internationalization

--- a/src/main/resources/NMQC_es.properties
+++ b/src/main/resources/NMQC_es.properties
@@ -22,8 +22,8 @@ DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=Este Plugin halla la uniformidad tomogr\u00e1
 ABOUT_TOMOGRAPHIC_UNIFORMITY=Acerca de Tomographic Uniformity...
 TOMOGRAPHIC_UNIFORMITY=Uniformidad Tomogr\u00e1fica
 MEAN_IMAGE=Imagen media
-FRAMES_TO=: Cortes
-FRAME=: Corte 
+FRAMES_TO=Cortes
+FRAME=Corte 
 INITIAL_FRAME=Corte inicial
 FINAL_FRAME=Corte final
 CENTRE_BORDER_CONTRAST=Contraste Centro - Borde
@@ -56,7 +56,7 @@ MAXIMUM_PIXEL_VALUE=M\u00e1ximo valor de pixel
 AVERAGE_PIXEL_VALUE=Valor de pixel promedio
 INTEGRAL_UNIFORMITY=Uniformidad Integral (%)
 DIFFERENTIAL_UNIFORMITY=Uniformidad Diferencial (%)
-CONVOLVED=Convolucionada
+CONVOLVED=Convoluci\u00f3n
 DESCRIPTION_INTRINSIC_RESOLUTION_AND_LINEARITY=Este Plugin determina el peor valor y el promedio de los valores de la resoluci\u00f3n intr\u00ednseca\n y determina la linealidad absoluta y diferencial.
 ABOUT_INTRINSIC_RESOLUTION_AND_LINEARITY=Acerca de Intrinsic Resolution and Linearity...
 INTRINSIC_RESOLUTION_AND_LINEARITY=Resoluci\u00f3n y Linealidad Intr\u00ednsecas: 
