--- a/src/main/resources/NMQC_it.properties
+++ b/src/main/resources/NMQC_it.properties
@@ -12,77 +12,77 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
  
-QUADRANT=Quadrant
-BARWIDTH=Barwidth (mm)
-QUADRANT_BAR_PHANTOM=Quadrant Bar Phantom: 
-ABOUT_QUADRANT_BAR=About Quadrant Bar Phantom...
-QUADRANT_BAR_DESCRIPTION=This plugin calculates the Spatial Resolution and MTF in a quadrant bar phantom.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
-TEST=Test
-DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=This plugin finds the tomographic uniformity in 3D reconstructions
-ABOUT_TOMOGRAPHIC_UNIFORMITY=About Tomographic Uniformity...
-TOMOGRAPHIC_UNIFORMITY=Tomographic Uniformity 
-MEAN_IMAGE=Mean Image
-FRAMES_TO=: Frames
-FRAME=: Frame 
-INITIAL_FRAME=Initial slice
-FINAL_FRAME=Final slice
-CENTRE_BORDER_CONTRAST=Centre - Border Contrast
-MAXIMUM_RING_CONTRAST=Maximum Ring Contrast
-DESCRIPTION_TOMOGRAPHIC_CONTRAST=This plugin finds the tomographic contrast in 3D reconstructions
-ABOUT_TOMOGRAPHIC_CONTRAST=About Tomographic Contrast...
-TOMOGRAPHIC_CONTRAST=Tomographic Contrast
-CONTRAST=Contrast
-MEAN=mean
-VALUE=value
-SPHERE=Sphere
-UNIFORMITY_IMAGE=Uniformity image
-COLD_SPHERES=Cold Spheres?
-UNIFORMITY_FRAME=Enter uniformity slice number
-POINT_ROI_REQUIRED=Point Roi required
-DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=This plugin calculates the System Spatial Resolution and the Pixel Size in a two bar image.
-ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=About Spatial Resolution and Pixel Size...
-SPATIAL_RESOLUTION_IN=Spatial resolution in 
-PIXEL_SIZE_IN=Pixel size in 
-DIFFERENCE=Difference(%)
-HEADER_PIXEL_SIZE=Header Pixel size(mm/px)
-REAL_PIXEL_SIZE=Real Pixel size(mm/px)
-RECTANGULAR_SELECTION_REQUIRED=Rectangular selection required
-DESCRIPTION_PLANAR_UNIFORMITY=This plugin finds the intrinsic uniformity in planar images
-ABOUT_PLANAR_UNIFORMITY=About Planar Uniformity...
-PLANAR_UNIFORMITY=Intrinsic Uniformity: 
-MINIMUM_PIXEL_VALUE=Minimum Pixel Value
-MAXIMUM_PIXEL_VALUE=Maximum Pixel Value
-AVERAGE_PIXEL_VALUE=Average Pixel Value
-INTEGRAL_UNIFORMITY=Integral Uniformity (%)
-DIFFERENTIAL_UNIFORMITY=Differential Uniformity (%)
-CONVOLVED=Convolved
-DESCRIPTION_INTRINSIC_RESOLUTION_AND_LINEARITY=This plugin determinate the worst value and the mean of the values of intrinsic resolution\n and determinate the absolute linearity and differential linearity.
-ABOUT_INTRINSIC_RESOLUTION_AND_LINEARITY=About Intrinsic Resolution and Linearity...
-INTRINSIC_RESOLUTION_AND_LINEARITY=Intrinsic Resolution and Linearity: 
-DIFFERENTIAL_LINEARITY_IN=Differential Linearity in 
-ABSOLUTE_LINEARITY_IN=Absolute Linearity in 
-MEAN_INTRINSIC_FWTM_IN=Mean Intrinsic FWTM in 
-MEAN_INTRINSIC_FWHM_IN=Mean Intrinsic FWHM in
-WORST_INTRINSIC_FWTM_IN=Worst Intrinsic FWTM in 
-WORST_INTRINSIC_FWHM_IN=Worst Intrinsic FWHM in 
-NUMBER_OF_BINS=Number of bins: 
-HORIZONTAL=Horizontal
-VERTICAL=Vertical
-ENTER_DISTANCE_BETWEEN_SOURCES=Enter distance between sources (cm):
-FOUR_BARS_PHANTOM=Four Bars Phantom
-ABOUT_FOUR_BARS_PHANTOM=About Four Bars Phantom...
-DESCRIPTION_FOUR_BARS_PHANTOM=This plugin calculates the Spatial Resolution and Pixel Sizes in both axis of the image.
-DESCRIPTION_COR=This plugin determines the offset of the center of rotation of gamma camera
-ABOUT_COR=About COR...
-CENTER_OF_ROTATIONCONJUGATE_VIEWS=Center of Rotation: Conjugate Views
-SCAN_ARC_MUST_BE_360_FOR_THIS_METHOD=Scan Arc must be 360 for this method\n Current Scan Arc is:
-ERROR_IN_CONNJUGATE_VIEW_METHOD=Error in Connjugate View Method
-CENTER_OF_ROTATIONSINE_FIT=Center of Rotation: Sine Fit 
-CURVE_FITTING_ERROR=Curve Fitting Error:\n Error: fit yields Not-a-Number
+QUADRANT=Quadrante
+BARWIDTH=Barra Larghezza (mm)
+QUADRANT_BAR_PHANTOM=Fantoccio barra di Quadrante: 
+ABOUT_QUADRANT_BAR=A proposito di Quadrant Bar Phantom...
+QUADRANT_BAR_DESCRIPTION=Questo plugin calcola la risoluzione spaziale e MTF in un fantoccio barra di quadrante.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
+TEST=Prova
+DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=Questo plugin trova l'uniformit\u00e0 tomografica in ricostruzioni 3D
+ABOUT_TOMOGRAPHIC_UNIFORMITY=A proposito di Tomographic Uniformity...
+TOMOGRAPHIC_UNIFORMITY=Uniformit\u00e0 Tomografica 
+MEAN_IMAGE=Immagine medio
+FRAMES_TO=: Fotogramma
+FRAME=: Fotogramma 
+INITIAL_FRAME=Fotogramma iniziale
+FINAL_FRAME=Fotogramma finale
+CENTRE_BORDER_CONTRAST=Contrasto Centro - Bordo
+MAXIMUM_RING_CONTRAST=Contrasto massimo anello
+DESCRIPTION_TOMOGRAPHIC_CONTRAST=Questo plugin trova il contrasto tomografia a ricostruzioni 3D
+ABOUT_TOMOGRAPHIC_CONTRAST=A proposito di Tomographic Contrast...
+TOMOGRAPHIC_CONTRAST=Contrasto Tomografico
+CONTRAST=Contrasto
+MEAN=Medio
+VALUE=Valore
+SPHERE=Sfera
+UNIFORMITY_IMAGE=Immagine di uniformit\u00e0
+COLD_SPHERES=Sfere freddo?
+UNIFORMITY_FRAME=Inserire uniformit\u00e0 numero di fotograma
+POINT_ROI_REQUIRED=Point Roi richiesto 
+DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=Questo plugin calcola la risoluzione spaziale del sistema e la dimensione dei pixel un'immagine di due bar.
+ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=A proposito di Spatial Resolution and Pixel Size...
+SPATIAL_RESOLUTION_IN=Risoluzione spaziale in  
+PIXEL_SIZE_IN=Dimensione dei pixel in
+DIFFERENCE=Differenza(%)
+HEADER_PIXEL_SIZE=Dimensione dei pixel in intestazione(mm/px)
+REAL_PIXEL_SIZE=Dimensione dei pixel verace(mm/px)
+RECTANGULAR_SELECTION_REQUIRED=Selezione rettangolare richiesto
+DESCRIPTION_PLANAR_UNIFORMITY=Questo plugin trova l'uniformit\u00e0 intrinseca nelle immagini planari
+ABOUT_PLANAR_UNIFORMITY=A proposito di Planar Uniformity...
+PLANAR_UNIFORMITY=Uniformit\u00e0 intrinseca: 
+MINIMUM_PIXEL_VALUE=Valore minimo dei Pixel
+MAXIMUM_PIXEL_VALUE=Valore massimo dei Pixel
+AVERAGE_PIXEL_VALUE=Valore medio dei Pixel
+INTEGRAL_UNIFORMITY=Uniformit\u00e0 integrale (%)
+DIFFERENTIAL_UNIFORMITY=Uniformit\u00e0 differenziale (%)
+CONVOLVED=Convoluta
+DESCRIPTION_INTRINSIC_RESOLUTION_AND_LINEARITY=Questo plugin determinare il valore peggiore e la media dei valori di risoluzione intrinseca\n e determinare la linearit\u00e0 differenziale e assoluta.
+ABOUT_INTRINSIC_RESOLUTION_AND_LINEARITY=A proposito di Intrinsic Resolution and Linearity...
+INTRINSIC_RESOLUTION_AND_LINEARITY=Risoluzione intrinseca e linearit\u00e0: 
+DIFFERENTIAL_LINEARITY_IN=Linearit\u00e0 differenziale in 
+ABSOLUTE_LINEARITY_IN=Linearit\u00e0 assoluta in 
+MEAN_INTRINSIC_FWTM_IN=Medio FWTM intrinseco in 
+MEAN_INTRINSIC_FWHM_IN=Medio FWHM intrinseco in
+WORST_INTRINSIC_FWTM_IN=Peggio FWTM intrinseco in 
+WORST_INTRINSIC_FWHM_IN=Peggio FWHM intrinseco in 
+NUMBER_OF_BINS=Numero di cassonetti: 
+HORIZONTAL=Orizzontale
+VERTICAL=Verticale
+ENTER_DISTANCE_BETWEEN_SOURCES=Inserire la distanza tra le fonti (cm):
+FOUR_BARS_PHANTOM=Quattro bar Fantoccio
+ABOUT_FOUR_BARS_PHANTOM=A proposito di Four Bars Phantom...
+DESCRIPTION_FOUR_BARS_PHANTOM=Questo plugin calcola la risoluzione spaziale e Pixel formati in entrambi gli assi dell'immagine.
+DESCRIPTION_COR=Questo plugin determina l'offset del centro di rotazione della gamma camera
+ABOUT_COR=A proposito di COR...
+CENTER_OF_ROTATIONCONJUGATE_VIEWS=Centro di Rotazione: Vista coniugata
+SCAN_ARC_MUST_BE_360_FOR_THIS_METHOD=Scansione Arc deve essere 360 per questo metodo\n Attuale scansione Arc:
+ERROR_IN_CONNJUGATE_VIEW_METHOD=Errore nel metodo di vista coniugata 
+CENTER_OF_ROTATIONSINE_FIT=Centro di Rotazione: adatto di seno 
+CURVE_FITTING_ERROR=Errore in adattamento di curva:\n Errore: adatte rendimenti non \u00e8 un numero
 BAD_FORMULA=_FUNCTION(X,_A,_...)=Bad formula; should be:\n   y = function(x, a, ...)
-ERROR_WHILE_READING_HEADER=Error while reading header
-NO_INFO_FOR_KEY_IN_DICOM_HEADER=No info for key {0} in dicom header
-BAD_HEADER_OR_NOT_A_DICOM_HEADER=Bad header or not a dicom header
-SAVE_AS_EXCEL_FILE=Save as Excel file?
-TWO_BARS_PHANTOM_NEEDED=Two bars phantom needed
-PROFILE=Profile
+ERROR_WHILE_READING_HEADER=Errore durante la lettura d'intestazione
+NO_INFO_FOR_KEY_IN_DICOM_HEADER=Nessuna informazione per il tasto {0} nell'intestazione DICOM
+BAD_HEADER_OR_NOT_A_DICOM_HEADER=Bad intestazione o no un'intestazione DICOM
+SAVE_AS_EXCEL_FILE=Salva come file Excel?
+TWO_BARS_PHANTOM_NEEDED=Due bar fantoccio richiesto
+PROFILE=Profilo
