--- a/src/main/resources/NMQC_it.properties
+++ b/src/main/resources/NMQC_it.properties
@@ -13,76 +13,76 @@
 # limitations under the License.
  
 QUADRANT=Quadrante
-BARWIDTH=Barra Larghezza (mm)
-QUADRANT_BAR_PHANTOM=Fantoccio barra di Quadrante: 
-ABOUT_QUADRANT_BAR=A proposito di Quadrant Bar Phantom...
-QUADRANT_BAR_DESCRIPTION=Questo plugin calcola la risoluzione spaziale e MTF in un fantoccio barra di quadrante.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
-TEST=Prova
-DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=Questo plugin trova l'uniformit\u00e0 tomografica in ricostruzioni 3D
-ABOUT_TOMOGRAPHIC_UNIFORMITY=A proposito di Tomographic Uniformity...
+BARWIDTH=Larghezza Barre (mm)
+QUADRANT_BAR_PHANTOM=Fantoccio a quattro quadranti 
+ABOUT_QUADRANT_BAR=A proposito del fantoccio a quattro quadranti...
+QUADRANT_BAR_DESCRIPTION=Questo plugin calcola la risoluzione spaziale e MTF in un fantoccio a quattro quadranti.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
+TEST=Test
+DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=Questo plugin calcola l'uniformit\u00e0 tomografica in ricostruzioni 3D
+ABOUT_TOMOGRAPHIC_UNIFORMITY=A proposito di uniformit\u00e0 tomografica...
 TOMOGRAPHIC_UNIFORMITY=Uniformit\u00e0 Tomografica 
-MEAN_IMAGE=Immagine medio
-FRAMES_TO=: Fotogramma
-FRAME=: Fotogramma 
-INITIAL_FRAME=Fotogramma iniziale
-FINAL_FRAME=Fotogramma finale
+MEAN_IMAGE=Immagine media
+FRAMES_TO=:Fetta
+FRAME=:Fetta
+INITIAL_FRAME=Fetta iniziale
+FINAL_FRAME=Fetta finale
 CENTRE_BORDER_CONTRAST=Contrasto Centro - Bordo
 MAXIMUM_RING_CONTRAST=Contrasto massimo anello
-DESCRIPTION_TOMOGRAPHIC_CONTRAST=Questo plugin trova il contrasto tomografia a ricostruzioni 3D
-ABOUT_TOMOGRAPHIC_CONTRAST=A proposito di Tomographic Contrast...
+DESCRIPTION_TOMOGRAPHIC_CONTRAST=Questo plugin trova il contrasto in tomografia a ricostruzioni 3D
+ABOUT_TOMOGRAPHIC_CONTRAST=A proposito di contrasto tomografico...
 TOMOGRAPHIC_CONTRAST=Contrasto Tomografico
 CONTRAST=Contrasto
 MEAN=Medio
 VALUE=Valore
 SPHERE=Sfera
 UNIFORMITY_IMAGE=Immagine di uniformit\u00e0
-COLD_SPHERES=Sfere freddo?
-UNIFORMITY_FRAME=Inserire uniformit\u00e0 numero di fotograma
-POINT_ROI_REQUIRED=Point Roi richiesto 
-DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=Questo plugin calcola la risoluzione spaziale del sistema e la dimensione dei pixel un'immagine di due bar.
-ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=A proposito di Spatial Resolution and Pixel Size...
+COLD_SPHERES=Sfere fredde
+UNIFORMITY_FRAME=Inserire numero fetta per uniformit\u00e0
+POINT_ROI_REQUIRED=Punto ROI richiesto 
+DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=Questo plugin calcola la risoluzione spaziale di sistema e la dimensione dei pixel partendo dall'immagine di due sorgenti lineari.
+ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=A proposito di risoluzione spaziale e dimensione del pixel...
 SPATIAL_RESOLUTION_IN=Risoluzione spaziale in  
 PIXEL_SIZE_IN=Dimensione dei pixel in
 DIFFERENCE=Differenza(%)
-HEADER_PIXEL_SIZE=Dimensione dei pixel in intestazione(mm/px)
-REAL_PIXEL_SIZE=Dimensione dei pixel verace(mm/px)
-RECTANGULAR_SELECTION_REQUIRED=Selezione rettangolare richiesto
-DESCRIPTION_PLANAR_UNIFORMITY=Questo plugin trova l'uniformit\u00e0 intrinseca nelle immagini planari
-ABOUT_PLANAR_UNIFORMITY=A proposito di Planar Uniformity...
-PLANAR_UNIFORMITY=Uniformit\u00e0 intrinseca: 
-MINIMUM_PIXEL_VALUE=Valore minimo dei Pixel
-MAXIMUM_PIXEL_VALUE=Valore massimo dei Pixel
-AVERAGE_PIXEL_VALUE=Valore medio dei Pixel
+HEADER_PIXEL_SIZE=Dimensione del pixel nell'header (mm/px)
+REAL_PIXEL_SIZE=Dimensione dei pixel calcolata (mm/px)
+RECTANGULAR_SELECTION_REQUIRED=ROI rettangolare richiesta
+DESCRIPTION_PLANAR_UNIFORMITY=Questo plugin calcola l'uniformit\u00e0 intrinseca nelle immagini planari
+ABOUT_PLANAR_UNIFORMITY=A proposito di uniformit\u00e0 planare...
+PLANAR_UNIFORMITY=Uniformit\u00e0 planare: 
+MINIMUM_PIXEL_VALUE=Valore minimo dei pixel
+MAXIMUM_PIXEL_VALUE=Valore massimo dei pixel
+AVERAGE_PIXEL_VALUE=Valore medio dei pixel
 INTEGRAL_UNIFORMITY=Uniformit\u00e0 integrale (%)
 DIFFERENTIAL_UNIFORMITY=Uniformit\u00e0 differenziale (%)
-CONVOLVED=Convoluta
-DESCRIPTION_INTRINSIC_RESOLUTION_AND_LINEARITY=Questo plugin determinare il valore peggiore e la media dei valori di risoluzione intrinseca\n e determinare la linearit\u00e0 differenziale e assoluta.
-ABOUT_INTRINSIC_RESOLUTION_AND_LINEARITY=A proposito di Intrinsic Resolution and Linearity...
-INTRINSIC_RESOLUTION_AND_LINEARITY=Risoluzione intrinseca e linearit\u00e0: 
+CONVOLVED=Convoluzione
+DESCRIPTION_INTRINSIC_RESOLUTION_AND_LINEARITY=Questo plugin calcola il valore peggiore e la media dei valori di risoluzione spaziale intrinseca\n e calcola la linearit\u00e0 differenziale e assoluta.
+ABOUT_INTRINSIC_RESOLUTION_AND_LINEARITY=A proposito di risoluzione spaziale intrinseca e linearit\u00e0...
+INTRINSIC_RESOLUTION_AND_LINEARITY=Risoluzione spaziale intrinseca e linearit\u00e0: 
 DIFFERENTIAL_LINEARITY_IN=Linearit\u00e0 differenziale in 
 ABSOLUTE_LINEARITY_IN=Linearit\u00e0 assoluta in 
-MEAN_INTRINSIC_FWTM_IN=Medio FWTM intrinseco in 
-MEAN_INTRINSIC_FWHM_IN=Medio FWHM intrinseco in
-WORST_INTRINSIC_FWTM_IN=Peggio FWTM intrinseco in 
-WORST_INTRINSIC_FWHM_IN=Peggio FWHM intrinseco in 
-NUMBER_OF_BINS=Numero di cassonetti: 
+MEAN_INTRINSIC_FWTM_IN=FWTM intrinseca media  in 
+MEAN_INTRINSIC_FWHM_IN=FWHM intrinseca media  in
+WORST_INTRINSIC_FWTM_IN=Peggior FWTM intrinseca in 
+WORST_INTRINSIC_FWHM_IN=Peggior FWHM intrinseca in 
+NUMBER_OF_BINS=Numero di bin: 
 HORIZONTAL=Orizzontale
 VERTICAL=Verticale
-ENTER_DISTANCE_BETWEEN_SOURCES=Inserire la distanza tra le fonti (cm):
-FOUR_BARS_PHANTOM=Quattro bar Fantoccio
-ABOUT_FOUR_BARS_PHANTOM=A proposito di Four Bars Phantom...
-DESCRIPTION_FOUR_BARS_PHANTOM=Questo plugin calcola la risoluzione spaziale e Pixel formati in entrambi gli assi dell'immagine.
-DESCRIPTION_COR=Questo plugin determina l'offset del centro di rotazione della gamma camera
+ENTER_DISTANCE_BETWEEN_SOURCES=Inserire la distanza tra le sorgenti (cm):
+FOUR_BARS_PHANTOM=Fantoccio a quattro quadranti
+ABOUT_FOUR_BARS_PHANTOM=A proposito del fantoccio a quattro quadranti...
+DESCRIPTION_FOUR_BARS_PHANTOM=Questo plugin calcola la risoluzione spaziale e la dimensione del pixel in entrambe le direzioni dell'immagine.
+DESCRIPTION_COR=Questo plugin calcola l'offset del centro di rotazione della gamma camera
 ABOUT_COR=A proposito di COR...
-CENTER_OF_ROTATIONCONJUGATE_VIEWS=Centro di Rotazione: Vista coniugata
-SCAN_ARC_MUST_BE_360_FOR_THIS_METHOD=Scansione Arc deve essere 360 per questo metodo\n Attuale scansione Arc:
-ERROR_IN_CONNJUGATE_VIEW_METHOD=Errore nel metodo di vista coniugata 
-CENTER_OF_ROTATIONSINE_FIT=Centro di Rotazione: adatto di seno 
-CURVE_FITTING_ERROR=Errore in adattamento di curva:\n Errore: adatte rendimenti non \u00e8 un numero
-BAD_FORMULA=_FUNCTION(X,_A,_...)=Bad formula; should be:\n   y = function(x, a, ...)
-ERROR_WHILE_READING_HEADER=Errore durante la lettura d'intestazione
-NO_INFO_FOR_KEY_IN_DICOM_HEADER=Nessuna informazione per il tasto {0} nell'intestazione DICOM
-BAD_HEADER_OR_NOT_A_DICOM_HEADER=Bad intestazione o no un'intestazione DICOM
-SAVE_AS_EXCEL_FILE=Salva come file Excel?
-TWO_BARS_PHANTOM_NEEDED=Due bar fantoccio richiesto
+CENTER_OF_ROTATIONCONJUGATE_VIEWS=Centro di Rotazione: Viste coniugata
+SCAN_ARC_MUST_BE_360_FOR_THIS_METHOD=La rotazione deve essere di 360 per questo metodo\n La rotazione attuale è:
+ERROR_IN_CONNJUGATE_VIEW_METHOD=Errore nel metodo delle viste coniugate 
+CENTER_OF_ROTATIONSINE_FIT=Centro di Rotazione: fit sinusoidale 
+CURVE_FITTING_ERROR=Errore nel fitting:\n Errore: i campi inseriti non sono numeri
+BAD_FORMULA=_FUNCTION(X,_A,_...)=Equazione errata; should be:\n   y = function(x, a, ...)
+ERROR_WHILE_READING_HEADER=Errore durante la lettura del header
+NO_INFO_FOR_KEY_IN_DICOM_HEADER=Nessuna informazione per il tasto {0} nell'header DICOM
+BAD_HEADER_OR_NOT_A_DICOM_HEADER=Header inesistente o corrotto
+SAVE_AS_EXCEL_FILE=Salvare come file Excel?
+TWO_BARS_PHANTOM_NEEDED=Sono richieste due sorgenti lineari
 PROFILE=Profilo
